# AutonomousTradingSystem

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  PLANS.md  QUALITY.md  README.md  SECURITY.md  TRADING_MANDATE.md  pyproject.toml
.agents/skills/adversarial-strategy-validation/: SKILL.md
.agents/skills/architecture-decision/: SKILL.md
.agents/skills/data-quality-audit/: SKILL.md
.agents/skills/linear-issue-delivery/: SKILL.md
.agents/skills/risk-critical-change/: SKILL.md
.agents/skills/strategy-experiment/: SKILL.md
.github/workflows/: ci.yml
docs/: README.md  audit.md  configuration.md  skills.md
docs/decisions/: 0001-enforce-package-dependency-direction.md  README.md
docs/plans/: BUB-10-append-only-audit-events.md  BUB-28-initial-repository-skills.md  BUB-7-package-boundaries.md  BUB-8-typed-configuration.md  README.md
docs/runbooks/: README.md
docs/validation/: README.md
scripts/: check_import_boundaries.py  check_repository_skills.py  validate.py
src/autonomous_trading/: __init__.py
src/autonomous_trading/audit/: __init__.py  log.py  schema.py
src/autonomous_trading/backtest/: __init__.py
src/autonomous_trading/configuration/: __init__.py  loader.py  schema.py
src/autonomous_trading/control_plane/: __init__.py
src/autonomous_trading/data/: __init__.py
src/autonomous_trading/deployment/: AGENTS.md  __init__.py
src/autonomous_trading/execution/: AGENTS.md  __init__.py
tests/: conftest.py  test_audit.py  test_configuration.py  test_import_boundaries.py  test_package.py  test_repository_skills.py
(+17 files in other folders)
