[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "autonomous-trading-system"
version = "0.1.0"
description = "Safety-first infrastructure for autonomous trading research and paper simulation."
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [{ name = "Ben Faulkner" }]
dependencies = []

[dependency-groups]
dev = [
    "build>=1.3,<2",
    "hatchling>=1.27,<2",
    "hypothesis>=6.140,<7",
    "pyright>=1.1.400,<2",
    "pytest>=9,<10",
    "pytest-socket>=0.7,<1",
    "pyyaml>=6,<7",
    "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autonomous_trading"]

[tool.pytest.ini_options]
addopts = [
    "--disable-socket",
    "--strict-config",
    "--strict-markers",
    "-ra",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py314"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "PT",
    "RUF",
    "SIM",
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pyright]
include = ["src", "tests", "scripts"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
